--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -71,26 +71,26 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           </thead>
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Abbotsford Care Limited</td>
-            <td class="govuk-table__cell">Abbotsford Care Limited </td>
+            <td class="govuk-table__cell">ABC opticians</td>
+            <td class="govuk-table__cell">ABC opticians </td>
             <td class="govuk-table__cell">X4JKRY</td>
             <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
-              <td class="govuk-table__cell">Abbotsford Care Limited</td>
+              <td class="govuk-table__cell">Accountant Ltd</td>
+              <td class="govuk-table__cell">ABC opticians</td>
               <td class="govuk-table__cell">3W5D6J</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">BAC LIMITED</td>
+              <td class="govuk-table__cell">BAC Limited</td>
               <td class="govuk-table__cell">BAC LIMITED</td>
               <td class="govuk-table__cell">3W5D6J</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">ESFA LTD</td>
-              <td class="govuk-table__cell">ESFA LTD</td>
+              <td class="govuk-table__cell">ESFA</td>
+              <td class="govuk-table__cell">ESFA</td>
               <td class="govuk-table__cell">7XZ66W</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
