--- a/app/views/v9/provider/create/task-list.html
+++ b/app/views/v9/provider/create/task-list.html
@@ -41,7 +41,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
             {% if data.section1 == "completed" %}
             <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
             {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
+            <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="list-convictions-status">In progress</strong>
             {% endif %}
           </span>
         </h2>
@@ -49,29 +49,19 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="title?return_url=task-list" aria-describedby="eligibility-status">
-                Vacancy title
+              <a href="employer" aria-describedby="eligibility-status">
+                Name of employer
               </a>
-           </span>
-            <!--{% if data.title %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
+           </span> 
           </li>
 
           <li class="app-task-list__item">
-            <span class="app-task-list__task-name">   
-              {% if data.section1 == "completed" %}                         
-              <a href="employers-select?return_url=task-list" aria-describedby="contact-details-status">
-                Name of employer
+            <span class="app-task-list__task-name">
+              <a href="title?return_url=task-list" aria-describedby="eligibility-status">
+                Vacancy title
               </a>
-              {%else%}
-                Name of employer
-              {%endif%}             
-            </span>
+           </span> 
           </li>
-          
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
