--- a/app/views/v9/provider/create/title.html
+++ b/app/views/v9/provider/create/title.html
@@ -35,7 +35,7 @@ What do you want to call this vacancy? - Recruitment - {{serviceName}} - GOV.UK
 
         {{ govukButton({
           text: "Save and continue",
-          href: "employer"
+          href: "std-select"
         }) }}      
         <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
 
