--- a/app/views/v9/provider/create/employers-select-0.html
+++ b/app/views/v9/provider/create/employers-select-0.html
@@ -59,7 +59,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
       <p class="govuk-body"><a href="employers-select">Clear search</a></p>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">0 organisations match <b>'sjhfgsjfg'</b></p>
+      <p class="govuk-body govuk-!-margin-bottom-6">0 organisations match <b>'test'</b></p>
 
          
     </form>
