--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -80,27 +80,68 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
               <td class="govuk-table__cell">Accountant Ltd</td>
               <td class="govuk-table__cell">ABC opticians</td>
               <td class="govuk-table__cell">3W5D6J</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">BAC Limited</td>
               <td class="govuk-table__cell">BAC LIMITED</td>
+              <td class="govuk-table__cell">7KF9PL</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">CITY AND GUILDS</td>
+              <td class="govuk-table__cell">CITY AND GUILDS</td>
+              <td class="govuk-table__cell">8NWK7J</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">Coventry City Council</td>
+              <td class="govuk-table__cell">Coventry City Council</td>
+              <td class="govuk-table__cell">9GBKJW</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">Coventry City Council</td>
+              <td class="govuk-table__cell">Coventry City Council</td>
+              <td class="govuk-table__cell">L7YPX4</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">ENGINEERING & BUILDING SOLUTIONS LTD</td>
+              <td class="govuk-table__cell">ENGINEERING & BUILDING SOLUTIONS LTD</td>
               <td class="govuk-table__cell">3W5D6J</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">ESFA</td>
               <td class="govuk-table__cell">ESFA</td>
               <td class="govuk-table__cell">7XZ66W</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">ONA CONSULTING LTD</td>
+              <td class="govuk-table__cell">ONA CONSULTING LTD</td>
+              <td class="govuk-table__cell">8NX69G</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">SAINSBURY'S</td>
               <td class="govuk-table__cell">SAINSBURY'S </td>
               <td class="govuk-table__cell">P4JKRY</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
             </tr>
-    
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">TAB A CAB LTD</td>
+              <td class="govuk-table__cell">TAB A CAB LTD </td>
+              <td class="govuk-table__cell">XD784N</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">WARWICKSHIRE CHAMBER OF COMMERCE</td>
+              <td class="govuk-table__cell">WARWICKSHIRE CHAMBER OF COMMERCE </td>
+              <td class="govuk-table__cell">D9YWX8</td>
+              <td class="govuk-table__cell"><a href="#">Select</a></td>
+            </tr>
     
             </tr>
           </tbody>
