choose an employer pages

--- a/app/views/v9/traineeships/create/employer-check.html
+++ b/app/views/v9/traineeships/create/employer-check.html
@@ -217,7 +217,7 @@ Manage apprentices
             None added
            <dd class="govuk-summary-list__actions">
              <a class="govuk-link" href="display-name?change=yes">
-               Add <span class="govuk-visually-hidden"> emplopyer website</span>
+               Add <span class="govuk-visually-hidden"> employer website</span>
              </a>
            </dd>
          </div>
