--- a/app/views/v9/provider/create/employers-confirm.html
+++ b/app/views/v9/provider/create/employers-confirm.html
@@ -14,7 +14,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
   <div class="govuk-grid-column-two-thirds">
     
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span> -->
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm organisation</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm employer</h1>
 
     <form method="post" action="task-list">
       
@@ -27,7 +27,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
              Agreement ID: X4JKRY
              </span>
 
-             <p><h3 class="govuk-heading-s">Is this the organisation you'd like to create a vacancy for?</h3></p>
+             <p><h3 class="govuk-heading-s">Is this the employer you'd like to create a vacancy for?</h3></p>
 
         <div class="govuk-radios">
           <div class="govuk-radios__item">
@@ -39,7 +39,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="create-vacancy-no" name="create-vacancy" type="radio" value="no">
             <label class="govuk-label govuk-radios__label" for="create-vacancy-no">
-              No, choose a different organisation
+              No, choose a different employer
             </label>
           </div>
         </div>
