--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -13,30 +13,30 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
    
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which organisation do you want to create a vacancy for?</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which employer do you want to create a vacancy for?</h1>
 
     <form method="post" action="employers-select-0">
 
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            The organisation I want to select is not listed
+            The employer I want to select is not listed
           </span>
         </summary>
         <div class="govuk-details__text">
-          The organisation is not listed because you do not have permission to create a vacancy for them. <br><br>
+          The employer is not listed because you do not have permission to create a vacancy for them. <br><br>
           You'll need to contact them to give you permission in the 'training provider permissions’ section of their Apprenticeship service account. 
         </div>
       </details>
       
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-visually-hidden">Search organisation name or account name</legend>
+        <legend class="govuk-visually-hidden">Search employer name or account name</legend>
         <div class="govuk-form-group search-field search-field-darker">
 
           <div class="search-input search-input-with-button">
             <label class="govuk-label" for="query">
               <!--Client reference-->
-              Search organisation name or account name
+              Search employer name or account name
             </label>
 
             <div class="autocomplete__parent_wrapper">
@@ -63,7 +63,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           <table class="govuk-table govuk-!-margin-bottom-8" id="order-table-one">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Organisation</th>
+            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Employer</th>
             <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Account name</th>
             <th scope="col" class="govuk-table__header">Agreement ID</th>
             <th scope="col" class="govuk-table__header"></th>
