--- a/app/views/v9/traineeships/create/employers-confirm.html
+++ b/app/views/v9/traineeships/create/employers-confirm.html
@@ -14,7 +14,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
   <div class="govuk-grid-column-two-thirds">
     
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span> -->
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm organisation</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm employer</h1>
 
     <form method="post" action="task-list">
       
@@ -22,27 +22,27 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
 
-             <h3 class="govuk-heading-m">SAINSBURY'S</h3>
-             <span class="govuk-caption-m">Account name: SAINSBURY'S<br>
-             Agreement ID: X4JKRY
-             </span>
+          <h3 class="govuk-heading-m">ABC opticians</h3>
+          <span class="govuk-caption-m">Account name: ABC opticians<br>
+          Agreement ID: X4JKRY
+          </span>
 
-             <p><h3 class="govuk-heading-s">Is this the organisation you'd like to create a vacancy for?</h3></p>
+          <p><h3 class="govuk-heading-s">Is this the employer you'd like to create a vacancy for?</h3></p>
 
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="create-cohort-yes" name="create-vacancy" type="radio" value="yes">
-            <label class="govuk-label govuk-radios__label" for="create-vacancy-yes">
-              Yes, use SAINSBURY'S
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="create-vacancy-no" name="create-vacancy" type="radio" value="no">
-            <label class="govuk-label govuk-radios__label" for="create-cohort-vacancy">
-              No, choose a different organisation
-            </label>
-          </div>
-        </div>
+     <div class="govuk-radios">
+       <div class="govuk-radios__item">
+         <input class="govuk-radios__input" id="create-vacancy-yes" name="create-vacancy" type="radio" value="yes">
+         <label class="govuk-label govuk-radios__label" for="create-vacancy-yes">
+           Yes, use ABC opticians
+         </label>
+       </div>
+       <div class="govuk-radios__item">
+         <input class="govuk-radios__input" id="create-vacancy-no" name="create-vacancy" type="radio" value="no">
+         <label class="govuk-label govuk-radios__label" for="create-vacancy-no">
+           No, choose a different employer
+         </label>
+       </div>
+     </div>
     
       </fieldset>
     </div>
