--- a/app/views/v9/traineeships/create/employers-select.html
+++ b/app/views/v9/traineeships/create/employers-select.html
@@ -13,7 +13,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
    
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which organisation do you want to create a vacancy for?</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which employer do you want to create a vacancy for?</h1>
 
     <form method="post" action="employers-select-0">
 
@@ -22,7 +22,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            The organisation I want to select is not listed
+            The employer I want to select is not listed
           </span>
         </summary>
         <div class="govuk-details__text">
@@ -40,7 +40,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           <div class="search-input search-input-with-button">
             <label class="govuk-label" for="query">
               <!--Client reference-->
-              Search organisation name or account name
+              Search employer name or account name
             </label>
 
             <div class="autocomplete__parent_wrapper">
@@ -51,7 +51,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
             <input class="govuk-text" name="searchOrgQuery" id="tt-default" value="">
           </div>
           <div class="search-submit">
-            <button class="govuk-button" data-module="govuk-button" type="submit" id="tt-default" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
+            <button class="govuk-button" data-module="govuk-button" type="submit" id="tt-default" name="searchOrgsSubmit" value="Search Organisations">Search employers</button>
           </div>
         </div>
       </fieldset>
@@ -61,48 +61,91 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 		
           <!-- TABLE RESULTS -->
           <table class="govuk-table govuk-!-margin-bottom-8" id="order-table-one">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Organisation</th>
-            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Account name</th>
-            <th scope="col" class="govuk-table__header">Agreement ID</th>
-            <th scope="col" class="govuk-table__header"></th>
-            </tr>
-          </thead>
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Abbotsford Care Limited</td>
-            <td class="govuk-table__cell">Abbotsford Care Limited </td>
-            <td class="govuk-table__cell">X4JKRY</td>
-            <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
-              <td class="govuk-table__cell">Abbotsford Care Limited</td>
-              <td class="govuk-table__cell">3W5D6J</td>
+            <thead class="govuk-table__head">
+              <tr class="govuk-table__row">
+              <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Employer</th>
+              <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Account name</th>
+              <th scope="col" class="govuk-table__header">Agreement ID</th>
+              <th scope="col" class="govuk-table__header"></th>
+              </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+              <td class="govuk-table__cell">ABC opticians</td>
+              <td class="govuk-table__cell">ABC opticians </td>
+              <td class="govuk-table__cell">X4JKRY</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">BAC LIMITED</td>
-              <td class="govuk-table__cell">BAC LIMITED</td>
-              <td class="govuk-table__cell">3W5D6J</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">ESFA LTD</td>
-              <td class="govuk-table__cell">ESFA LTD</td>
-              <td class="govuk-table__cell">7XZ66W</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">SAINSBURY'S</td>
-              <td class="govuk-table__cell">SAINSBURY'S </td>
-              <td class="govuk-table__cell">P4JKRY</td>
-              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
-            </tr>
-            </tr>
-          </tbody>
-          </table>		
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Accountant Ltd</td>
+                <td class="govuk-table__cell">ABC opticians</td>
+                <td class="govuk-table__cell">3W5D6J</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">BAC Limited</td>
+                <td class="govuk-table__cell">BAC LIMITED</td>
+                <td class="govuk-table__cell">7KF9PL</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">CITY AND GUILDS</td>
+                <td class="govuk-table__cell">CITY AND GUILDS</td>
+                <td class="govuk-table__cell">8NWK7J</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Coventry City Council</td>
+                <td class="govuk-table__cell">Coventry City Council</td>
+                <td class="govuk-table__cell">9GBKJW</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Coventry City Council</td>
+                <td class="govuk-table__cell">Coventry City Council</td>
+                <td class="govuk-table__cell">L7YPX4</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">ENGINEERING & BUILDING SOLUTIONS LTD</td>
+                <td class="govuk-table__cell">ENGINEERING & BUILDING SOLUTIONS LTD</td>
+                <td class="govuk-table__cell">3W5D6J</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">ESFA</td>
+                <td class="govuk-table__cell">ESFA</td>
+                <td class="govuk-table__cell">7XZ66W</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">ONA CONSULTING LTD</td>
+                <td class="govuk-table__cell">ONA CONSULTING LTD</td>
+                <td class="govuk-table__cell">8NX69G</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">SAINSBURY'S</td>
+                <td class="govuk-table__cell">SAINSBURY'S </td>
+                <td class="govuk-table__cell">P4JKRY</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">TAB A CAB LTD</td>
+                <td class="govuk-table__cell">TAB A CAB LTD </td>
+                <td class="govuk-table__cell">XD784N</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">WARWICKSHIRE CHAMBER OF COMMERCE</td>
+                <td class="govuk-table__cell">WARWICKSHIRE CHAMBER OF COMMERCE </td>
+                <td class="govuk-table__cell">D9YWX8</td>
+                <td class="govuk-table__cell"><a href="#">Select</a></td>
+              </tr>
+      
+              </tr>
+            </tbody>
+            </table>		
         </div>
       </div>
     </form>
