employer - delete advert

--- a/app/views/v10/employer/create/advert-preview.html
+++ b/app/views/v10/employer/create/advert-preview.html
@@ -246,9 +246,13 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your advert</a>
         </div>
 
-        <p><a href="#">Delete advert</a></p>
-
       </form>
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <h1 class="govuk-heading-s">No longer need this advert?</h1>
+
+      <a href="delete" class="govuk-button govuk-button--warning">Delete advert</a>
 
     </div>
   </div>
