--- a/app/views/v10/employer/create/check-your-answers.html
+++ b/app/views/v10/employer/create/check-your-answers.html
@@ -399,6 +399,12 @@ Training provider
 
         </form>
 
+        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+        <h1 class="govuk-heading-s">No longer need this advert?</h1>
+  
+        <a href="delete" class="govuk-button govuk-button--warning">Delete advert</a>
+  
       </div>
 </div>
 {% endblock %}
