--- a/app/views/v10/employer/create/task-list.html
+++ b/app/views/v10/employer/create/task-list.html
@@ -449,6 +449,13 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
           </li>
         </ul>
       </li>
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <h1 class="govuk-heading-s">No longer need this advert?</h1>
+
+      <a href="delete" class="govuk-button govuk-button--warning">Delete advert</a>
+
     </ol>
   </div>
 </div>
