--- a/app/views/v10/employer/create/delete.html
+++ b/app/views/v10/employer/create/delete.html
@@ -18,10 +18,9 @@ Manage apprentices
 <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
 
-       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">new job apprentice</h1>
+       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Safety, Health & Environment Technician Apprentice</h1>
 
        <h1 class="govuk-heading-l">Are you sure you want to delete this advert?</h1>
-       <p>!! Not working yet</p>
        <form action="/accounts/KK6WKG/vacancies/7943056c-1de8-4f78-959d-518b8fd59221/delete/" method="post">
            <div class="govuk-form-group">
                <fieldset class="govuk-fieldset">
@@ -45,7 +44,6 @@ Manage apprentices
 </div>
 
 
-    <a href="vacancy-preview" class="govuk-body das-button--link">  <input type="submit" class="govuk-button" name="continueButton" value="continue1" href="../vacancies" /></a>
       <br /><br />
     <!--  <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>-->
     </form>
