trainee delete vacancy

--- a/app/views/v10/provider/create/task-list.html
+++ b/app/views/v10/provider/create/task-list.html
@@ -419,7 +419,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
         </ul>
       </li>
 
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
 
