--- a/app/views/v10/traineeships/create/check-your-answers.html
+++ b/app/views/v10/traineeships/create/check-your-answers.html
@@ -337,6 +337,12 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         </form>
 
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+        <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
+  
+        <a href="delete" class="govuk-button govuk-button--warning">Delete vacancy</a>
+  
       </div>
 </div>
 {% endblock %}
