--- a/app/views/v10/traineeships/create/preview-vacancy.html
+++ b/app/views/v10/traineeships/create/preview-vacancy.html
@@ -257,9 +257,14 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your answers</a>
         </div>
 
-        <p><a href="#">Delete vacancy</a></p>
-
       </form>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
+
+      <a href="delete" class="govuk-button govuk-button--warning">Delete vacancy</a>
+
 
     </div>
   </div>
