--- a/app/views/v10/traineeships/create/task-list.html
+++ b/app/views/v10/traineeships/create/task-list.html
@@ -389,6 +389,13 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           </li>
         </ul>
       </li>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
+
+      <a href="delete" class="govuk-button govuk-button--warning">Delete vacancy</a>
+
     </ol>
   </div>
 </div>
