--- a/app/views/v10/employer/create/advert-preview.html
+++ b/app/views/v10/employer/create/advert-preview.html
@@ -248,7 +248,7 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
 
       </form>
 
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h1 class="govuk-heading-s">No longer need this advert?</h1>
 
