--- a/app/views/v10/employer/create/task-list.html
+++ b/app/views/v10/employer/create/task-list.html
@@ -450,7 +450,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
         </ul>
       </li>
 
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h1 class="govuk-heading-s">No longer need this advert?</h1>
 
