--- a/app/views/v10/provider/create/check-your-answers.html
+++ b/app/views/v10/provider/create/check-your-answers.html
@@ -409,7 +409,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         </form>
 
-        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
 
