--- a/app/views/v10/provider/create/preview-vacancy.html
+++ b/app/views/v10/provider/create/preview-vacancy.html
@@ -249,7 +249,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
 
       </form>
 
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
 
