--- a/app/views/v10/traineeships/create/delete.html
+++ b/app/views/v10/traineeships/create/delete.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Manage apprentices
@@ -18,10 +18,9 @@ Manage apprentices
 <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
 
-       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">new job apprentice</h1>
+       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Customer Relations Trainee</h1>
 
-       <h1 class="govuk-heading-l">Are you sure you want to delete this advert?</h1>
-       <p>!! Not working yet</p>
+       <h1 class="govuk-heading-l">Are you sure you want to delete this vacancy?</h1>
        <form action="/accounts/KK6WKG/vacancies/7943056c-1de8-4f78-959d-518b8fd59221/delete/" method="post">
            <div class="govuk-form-group">
                <fieldset class="govuk-fieldset">
@@ -29,11 +28,11 @@ Manage apprentices
                    <div class="govuk-radios">
                        <div class="govuk-radios__item">
                            <input type="radio" value="true" class="govuk-radios__input" id="delete-yes" data-val="true" data-val-required="Select yes if you want to delete this advert" name="ConfirmDeletion" />
-                           <label class="govuk-label govuk-radios__label" for="delete-yes">Yes, delete this advert now</label>
+                           <label class="govuk-label govuk-radios__label" for="delete-yes">Yes, delete this vacancy now</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input type="radio" value="false" class="govuk-radios__input" id="delete-no" name="ConfirmDeletion" />
-                           <label class="govuk-label govuk-radios__label" for="delete-no">No, do not delete this advert</label>
+                           <label class="govuk-label govuk-radios__label" for="delete-no">No, do not delete this vacancy</label>
                        </div>
                    </div>
                </fieldset>
@@ -45,7 +44,6 @@ Manage apprentices
 </div>
 
 
-    <a href="vacancy-preview" class="govuk-body das-button--link">  <input type="submit" class="govuk-button" name="continueButton" value="continue1" href="../vacancies" /></a>
       <br /><br />
     <!--  <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>-->
     </form>
