--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
@@ -179,14 +179,18 @@ Manage vacancy
               <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
             </div>
           </div>
-          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="">
+          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="Faizal">
         </div>
         <div class="search-submit">
-          <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
+          <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search applications</button>
         </div>
       </div>
     </fieldset>
 
+    <p class="govuk-body"><a href="employers-select">Clear search</a></p>
+
+    <p class="govuk-body govuk-!-margin-bottom-6">1 application matches <b>'Faizal'</b></p>
+    
   </div>
 </div>
   <!-- search box END -->
@@ -214,22 +218,7 @@ Manage vacancy
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
 
         </tr>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
 
-        </tr>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
-        </tr>
       </tbody>
     </table>
   </div>
