--- a/app/views/v10/provider/create/task-list.html
+++ b/app/views/v10/provider/create/task-list.html
@@ -11,7 +11,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
     <a href="../dashboard" class="govuk-back-link">Return to your applications</a>
   </div>
   <div class="govuk-grid-column-one-half govuk-!-padding-top-2" style="text-align:right; opacity:0.3">
-    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed" class="govuk-link">Skip</a>
+    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed&&section5=completed" class="govuk-link">Skip</a>
   </div>
 </div>
 {% endblock %}
@@ -34,6 +34,8 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
     <p class="govuk-body govuk-!-margin-bottom-7">You have completed 0 of 4 sections.</p>-->
 
     <ol class="app-task-list">
+
+<!-- section 1 START -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">1. </span> Vacancy summary 
@@ -73,29 +75,8 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Training course
               {% endif %}
             </span>
-            <!--{% if data.import_no %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
-
-          <!--<li class="app-task-list__item">
-            <span class="app-task-list__task-name">              
-              {% if data.section1 == "completed" %}
-              <a href="select-training-provider?return_url=task-list" aria-describedby="contact-details-status">
-                Have you found a training provider?
-              </a>
-              {% else %}
-                Have you found a training provider?
-              {% endif %}
-            </span>
-            {% if data.commodities and ( data.commodities | length ) > 0  or data.stock_number or data.upload or data.variety or data.number_of_packages %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
-          </li>
+        </li>
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
@@ -107,11 +88,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
               Summary of the apprenticeship
               {% endif %}
             </span>
-            <!--{% if data.commodities and ( data.commodities | length ) > 0  or data.stock_number or data.upload or data.variety or data.number_of_packages %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -124,16 +100,13 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Tasks and training details
               {% endif %}
             </span>
-            <!--{% if data.commodities and ( data.commodities | length ) > 0  or data.stock_number or data.upload or data.variety or data.number_of_packages %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
+<!-- section 1 END -->
 
+<!-- section 2 START -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">2.</span> Employment details
@@ -214,7 +187,9 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
          
         </ul>
       </li>
+<!-- section 2 END -->
 
+<!-- section 3 START -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">3.</span>Requirements and prospects
@@ -227,9 +202,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           </span>
         </h2>
         <ul class="app-task-list__items">
-          <!--<li class="app-task-list__item" style="border-top:none;">
-            Content explaining that the user needs to add more information
-          </li>-->
+
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section2 == "completed" %}
@@ -240,11 +213,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Skills
               {% endif %}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
+
           </li>  
           
           <li class="app-task-list__item">
@@ -281,16 +250,13 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Other things to consider
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
+<!-- section 3 END -->
 
+<!-- section 4 START -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">4.</span> About the employer
@@ -304,21 +270,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
         </h2>
  
         <ul class="app-task-list__items">
-          <!--<li class="app-task-list__item" style="border-top:none;">
-            Content explaining that the user needs to add employer information
-          </li>
-          <li class="app-task-list__item">
-            <span class="app-task-list__task-name">
-              {% if data.section3 == "completed" %}
-              <a href="employers-select?return_url=task-list" aria-describedby="list-convictions-status">
-                Which organisation is this vacancy for?
-              </a>
-              {%else%}
-                Which organisation is this vacancy for?
-              {%endif%}
-            </span>
-          </li>-->
-
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
@@ -329,11 +280,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Name of employer on vacancy
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -346,11 +292,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Employer information
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -363,11 +304,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Contact details
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -380,21 +316,48 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Application website
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
+<!-- section 4 END -->
 
+<!-- section 5 START -->
+<li>
+  <h2 class="app-task-list__section">
+    <span class="app-task-list__section-number">5.</span> Application
+    <span style="margin-left:310px;">
+      {% if data.section5 == "completed" %}
+      <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+      {%else%}
+      <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
+      {%endif%}
+    </span>
+  </h2>
+
+  <ul class="app-task-list__items">
+    <li class="app-task-list__item">
+      <span class="app-task-list__task-name">
+        {% if data.section4 == "completed" %}
+        <a href="extra-questions?return_url=task-list" aria-describedby="list-convictions-status">
+          Questions for applicants
+        </a>
+        {%else%}
+        Questions for applicants
+        {%endif%}
+      </span>
+    </li>
+
+  </ul>
+</li>
+<!-- section 5 END -->
+
+<!-- section 6 START -->
       <li>
         <h2 class="app-task-list__section">
-          <span class="app-task-list__section-number">5.</span> Check and submit your vacancy
+          <span class="app-task-list__section-number">6.</span> Check and submit your vacancy
           <span style="margin-left:105px;">
-            {% if data.section4 == "completed" %}
+            {% if data.section5 == "completed" %}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
             {%else%}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -405,8 +368,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="task-list-submit-enabled">
               <span class="app-task-list__task-name">
-                  <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
-                {% if data.section4 == "completed" %}
+                {% if data.section5 == "completed" %}
                 <a href="check-your-answers" aria-describedby="list-convictions-status">  
                   Check your answers and submit your vacancy
                 </a>
@@ -418,13 +380,15 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           </li>
         </ul>
       </li>
+<!-- section 6 END -->
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+<!-- delete vacancy START -->
       <h1 class="govuk-heading-s">No longer need this vacancy?</h1>
 
       <a href="delete" class="govuk-button govuk-button--warning">Delete vacancy</a>
-
+<!-- delete vacancy END -->
 
     </ol>
   </div>
