--- a/app/views/v10/provider/create/extra-questions.html
+++ b/app/views/v10/provider/create/extra-questions.html
@@ -17,7 +17,7 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 
     <form method="post" action="task-list?section5=completed">
 
-             <p>Applicants will answer these questions on the application form if they apply through Find an apprenticeship.</p>
+             <p>Applicants will answer these questions if they apply through Find an apprenticeship.</p>
 
              <br>
   
