traineeship extra question pages added

--- a/app/views/v10/employer/create/check-your-answers.html
+++ b/app/views/v10/employer/create/check-your-answers.html
@@ -387,10 +387,10 @@ Training provider
       <br>
     </dt>
     <dd class="govuk-summary-list__value">
-      [[show question or 'None' if they haven't enter one]]
+      [[show question or 'None' if they haven't entered one]]
       <br>
       <br>
-      [[show question or 'None' if they haven't enter one]]
+      [[show question or 'None' if they haven't entered one]]
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
