--- a/app/views/v10/provider/create/check-your-answers.html
+++ b/app/views/v10/provider/create/check-your-answers.html
@@ -394,10 +394,10 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
       <br>
     </dt>
     <dd class="govuk-summary-list__value">
-      [[show question or 'None' if they haven't enter one]]
+      [[show question or 'None' if they haven't entered one]]
       <br>
       <br>
-      [[show question or 'None' if they haven't enter one]]
+      [[show question or 'None' if they haven't entered one]]
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
