--- a/app/views/v10/traineeships/create/task-list.html
+++ b/app/views/v10/traineeships/create/task-list.html
@@ -292,20 +292,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
         </h2>
  
         <ul class="app-task-list__items">
-          <!--<li class="app-task-list__item" style="border-top:none;">
-            Content explaining that the user needs to add employer information
-          </li>
-          <li class="app-task-list__item">
-            <span class="app-task-list__task-name">
-              {% if data.section3 == "completed" %}
-              <a href="employers-select?return_url=task-list" aria-describedby="list-convictions-status">
-                Which organisation is this vacancy for?
-              </a>
-              {%else%}
-                Which organisation is this vacancy for?
-              {%endif%}
-            </span>
-          </li>-->
+
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
@@ -317,11 +304,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Name of employer on vacancy
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -334,11 +316,6 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Employer information
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -351,21 +328,48 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Contact details
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
 
+
+<!-- section 5 START -->
+<li>
+  <h2 class="app-task-list__section">
+    <span class="app-task-list__section-number">5.</span> Application
+    <span style="margin-left:310px;">
+      {% if data.section5 == "completed" %}
+      <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+      {%else%}
+      <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
+      {%endif%}
+    </span>
+  </h2>
+
+  <ul class="app-task-list__items">
+    <li class="app-task-list__item">
+      <span class="app-task-list__task-name">
+        {% if data.section4 == "completed" %}
+        <a href="extra-questions?return_url=task-list" aria-describedby="list-convictions-status">
+          Questions for applicants
+        </a>
+        {%else%}
+        Questions for applicants
+        {%endif%}
+      </span>
+    </li>
+
+  </ul>
+</li>
+<!-- section 5 END -->
+
+
       <li>
         <h2 class="app-task-list__section">
-          <span class="app-task-list__section-number">5.</span> Check and submit your vacancy
+          <span class="app-task-list__section-number">6.</span> Check and submit your vacancy
           <span style="margin-left:105px;">
-            {% if data.section4 == "completed" %}
+            {% if data.section5 == "completed" %}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
             {%else%}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -377,7 +381,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
             <span class="task-list-submit-enabled">
               <span class="app-task-list__task-name">
                   <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
-                {% if data.section4 == "completed" %}
+                {% if data.section5 == "completed" %}
                 <a href="check-your-answers" aria-describedby="list-convictions-status">  
                   Check your answers and submit your vacancy
                 </a>
