additonal questions added

--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
@@ -211,7 +211,7 @@ Manage vacancy
       </thead>
       <tbody>
         <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-failed">Faizal Dawood</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Faizal Dawood</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
