--- a/app/views/v10/employer/view-advert/3b-manage-advert-edited.html
+++ b/app/views/v10/employer/view-advert/3b-manage-advert-edited.html
@@ -179,18 +179,8 @@ Manage advert
 <h2 class="govuk-heading-l">Manage applications</h2>
 <table class="govuk-table responsive-table">
   <thead class="govuk-table__header">
-    <tr class="govuk-table__row" role="row">
-      <th class="govuk-table__cell" role="gridcell" class="bold">Name</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Application ID</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Status</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Date applied</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Disability</th>
-
-    </tr>
-  </thead>
-  <tbody>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-failed">Faizal Dawood</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -198,7 +188,7 @@ Manage advert
 
     </tr>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -206,7 +196,7 @@ Manage advert
 
     </tr>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
