--- a/app/views/v10/employer/view-advert/3b-manage-advert.html
+++ b/app/views/v10/employer/view-advert/3b-manage-advert.html
@@ -166,7 +166,7 @@ Manage advert
   </thead>
   <tbody>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-failed">Faizal Dawood</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -174,7 +174,7 @@ Manage advert
 
     </tr>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -182,7 +182,7 @@ Manage advert
 
     </tr>
     <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
+      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
       <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
       <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
