--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-edited.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-edited.html
@@ -173,7 +173,7 @@ Manage vacancy
       </thead>
       <tbody>
         <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-failed">Faizal Dawood</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Faizal Dawood</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -181,7 +181,7 @@ Manage vacancy
 
         </tr>
         <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Bill Shoggins</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
@@ -189,7 +189,7 @@ Manage vacancy
 
         </tr>
         <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
