--- a/app/views/v10/traineeships/account/application-new.html
+++ b/app/views/v10/traineeships/account/application-new.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "trainee-layout.html" %}
 
 
 {% block pageTitle %}
@@ -110,6 +110,19 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+    <section>
+      <h2 class="govuk-heading-l">Questions from the employer</h2>
+
+      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+      <p>[applicant answer]</p>
+
+      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+      <p>Yes</p>
+
+    </section>
+
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    
     <section>
       <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
       <p>No</p>
