updated from esfa to dfe

--- a/app/views/v10/traineeships/view-vacancy/1a-pending-esfa-review.html
+++ b/app/views/v10/traineeships/view-vacancy/1a-pending-esfa-review.html
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 vacancies pending ESFA review</b> &nbsp;
+  <p class="govuk-body"><b>2 vacancies pending DfE review</b> &nbsp;
     <a href="#">Show all vacancies</a>
   </p>
 
@@ -194,7 +194,7 @@ Vacancies
               <td class="govuk-table__cell">FENDI LTD</td>
               <td class="govuk-table__cell"> - </td>
               <td class="govuk-table__cell">01 Jun 2022</td>             
-              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">Pending ESFA review</strong></td>
+              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">Pending DfE review</strong></td>
               <td class="govuk-table__cell"><a href="1b-manage-vacancy" class="govuk-link">Manage</a></td>   
           </tr>
 
@@ -203,7 +203,7 @@ Vacancies
               <td class="govuk-table__cell">FENDI LTD</td>
               <td class="govuk-table__cell"> - </td>
               <td class="govuk-table__cell">01 Jun 2022</td>             
-              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">Pending ESFA review</strong></td>
+              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--orange">Pending DfE review</strong></td>
               <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
           </tr>
   </tbody>
