--- a/app/views/v10/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v10/traineeships/view-vacancy/0-dashboard.html
@@ -102,7 +102,7 @@ Recruitment - {{serviceName}} - GOV.UK
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
               <a class="card-link" href="1a-pending-esfa-review">
-                Pending ESFA review
+                Pending DfE review
               </a>
             </h3>
               <p class="govuk-body das-card--description">Vacancies that have been sent for review.</p>
