--- a/app/views/v10/provider/view-vacancy/2b-manage-vacancy.html
+++ b/app/views/v10/provider/view-vacancy/2b-manage-vacancy.html
@@ -35,7 +35,7 @@ Manage vacancy
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Pending ESFA review
+      Pending DfE review
     </dd>
   </div>
   <div class="govuk-summary-list__row">
