search box updated

--- a/app/views/v10/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v10/provider/view-vacancy/0-dashboard.html
@@ -28,7 +28,7 @@ Recruitment - {{serviceName}} - GOV.UK
                   <input type="hidden" name="clientsFilter" value="new">
                   <div class="search-input search-input-with-button">
                     <label class="govuk-label" for="search">
-                      Search by vacancy title, reference number or applicant name
+                      Search by vacancy title, reference number or applicant
                     </label>
                   <div class="autocomplete__parent_wrapper">
                     <div class="autocomplete__wrapper">
