employer and traineeship tasklist skip functionality updated

--- a/app/views/v10/traineeships/create/task-list.html
+++ b/app/views/v10/traineeships/create/task-list.html
@@ -11,7 +11,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
     <a href="../dashboard" class="govuk-back-link">Return to your applications</a>
   </div>
   <div class="govuk-grid-column-one-half govuk-!-padding-top-2" style="text-align:right; opacity:0.3">
-    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed" class="govuk-link">Skip</a>
+    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed&&section5=completed" class="govuk-link">Skip</a>
   </div>
 </div>
 {% endblock %}
