employer delete vacancy journey confirmation added

--- a/app/views/v10/employer/create/delete.html
+++ b/app/views/v10/employer/create/delete.html
@@ -14,7 +14,7 @@ Manage apprentices
 
 {% block content %}
 
-<form method="post">
+<form method="post" action="../view-advert/1a-draft-deleted">
 <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
 
