--- a/app/views/v10/employer/view-advert/0-dashboard.html
+++ b/app/views/v10/employer/view-advert/0-dashboard.html
@@ -78,7 +78,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">8</span>
-              <a class="card-link" href="#">
+              <a class="card-link" href="1a-draft">
                 Draft adverts
               </a>
             </h3>
