choose employer with search results page created

--- a/app/views/v11/provider/create/employers-select-search.html
+++ b/app/views/v11/provider/create/employers-select-search.html
@@ -15,7 +15,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
     
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which employer do you want to create a vacancy for?</h1>
 
-    <form method="post" action="employers-select">
+    <form method="post" action="employers-select-0">
 
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
@@ -48,7 +48,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
                 <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
               </div>
             </div>
-            <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="">
+            <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="ABC opticians">
           </div>
           <div class="search-submit">
             <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
