--- a/app/views/v11/provider/create/employers-select-search.html
+++ b/app/views/v11/provider/create/employers-select-search.html
@@ -76,6 +76,12 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
           </tr>
         </tr>
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell">Accountant Ltd</td>
+          <td class="govuk-table__cell">ABC opticians</td>
+          <td class="govuk-table__cell">3W5D6J</td>
+          <td class="govuk-table__cell"><a href="#">Select</a></td>
+        </tr>
       </tbody>
       </table>		
 
