delete api key journeys updated

--- a/app/views/v11/employer/api/api-hub.html
+++ b/app/views/v11/employer/api/api-hub.html
@@ -62,6 +62,15 @@ Key for API - Manage apprenticeships - GOV.UK
         Reasons you might want to renew your API key include &mdash; security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
       </div>
     </details>
+    
+    <form method="post" action="api-confirm-delete">
+
+      <button class="govuk-button govuk-button--warning" data-module="govuk-button">
+        Delete API key
+      </button>
+
+    </form>
+
   </div>
 </div>
 {% endblock %}
