--- a/app/views/v11/employer/api/api-list-deleted.html
+++ b/app/views/v11/employer/api/api-list-deleted.html
@@ -1,4 +1,4 @@
-{% extends "trainee-layout.html" %}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
 API list - Apprenticeships - GOV.UK
@@ -12,8 +12,25 @@ API list - Apprenticeships - GOV.UK
 {% endblock %}
 
 {% block content %}
+
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Success
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Display adverts API key deleted
+        </h3>
+        <!-- <p class="govuk-body">Contact <a class="govuk-notification-banner__link" href="#">example@department.gov.uk</a> if you think there's a problem.</p> -->
+      </div>
+    </div>
+
     <h1 class="govuk-heading-xl">API list</h1>
     <table class="govuk-table">
       <thead class="govuk-table__head">
@@ -53,7 +70,7 @@ API list - Apprenticeships - GOV.UK
           </td>
           <td class="govuk-table__cell">
             <a href="api-hub?apiName=display-adverts-api" class="govuk-link govuk-link--no-visited-state">
-              View key
+              Get key
             </a>  
           </td>
         </tr>
