--- a/app/views/v11/provider/api/api-list-deleted.html
+++ b/app/views/v11/provider/api/api-list-deleted.html
@@ -25,7 +25,7 @@ API list - Apprenticeships - GOV.UK
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          API key deleted
+          Display adverts API key deleted
         </h3>
         <!-- <p class="govuk-body">Contact <a class="govuk-notification-banner__link" href="#">example@department.gov.uk</a> if you think there's a problem.</p> -->
       </div>
