--- a/app/views/v11/provider/api/api-list.html
+++ b/app/views/v11/provider/api/api-list.html
@@ -23,6 +23,29 @@ API list - Apprenticeships - GOV.UK
         </tr>
       </thead>
       <tbody class="govuk-table__body">
+        <!-- <tr class="govuk-table__row">
+          <td class="govuk-table__cell" id="recruitment-api" name="apiName">
+            Track Apprenticeship Progress API
+            <span class="govuk-caption-m">Share data on the progress of your apprenticeships.</span>
+          </td>          
+          <td class="govuk-table__cell">
+            <a href="#" class="govuk-link govuk-link--no-visited-state">
+              Get key
+            </a>    
+          </td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell" id="recruitment-api" name="apiName">
+            Track Apprenticeship Progress API Sandbox
+            <span class="govuk-caption-m">Share data on the progress of your apprenticeships.</span>
+          </td>          
+          <td class="govuk-table__cell">
+            <a href="#" class="govuk-link govuk-link--no-visited-state">
+              Get key
+            </a>    
+          </td>
+        </tr> -->
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api" name="apiName">
             Recruitment API
