--- a/app/views/v11/traineeships/api/api-hub.html
+++ b/app/views/v11/traineeships/api/api-hub.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Key for API - Apprenticeships - GOV.UK
@@ -61,7 +61,16 @@ Key for API - Apprenticeships - GOV.UK
         <div class="govuk-details__text">
           Reasons you might want to renew your API key include &mdash; security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
         </div>
-      </details>
+      </details>      
+      
+      <form method="post" action="api-confirm-delete">
+
+        <button class="govuk-button govuk-button--warning" data-module="govuk-button">
+          Delete API key
+        </button>
+  
+      </form>
+
    </div>
 </div>
 {% endblock %}
