--- a/app/views/v11/traineeships/api/api.html
+++ b/app/views/v11/traineeships/api/api.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Get started with the recruitment APIs - Apprenticeships
