--- a/app/views/v11/provider/api/api-confirm-delete.html
+++ b/app/views/v11/provider/api/api-confirm-delete.html
@@ -19,34 +19,33 @@ Key for API - Apprenticeships - GOV.UK
         Deleting the key will disable the previous key and will stop your API from working until you get a new key.
       </p>
 
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
+      <form method="post" action="">
 
-          <div class="govuk-radios" data-module="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                Yes, delete API key
-              </label>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+  
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="api_delete_yes" name="api_delete" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="api-delete-no">
+                  Yes, delete API key
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="api_delete_no" name="api_delete" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="api_delete_no">
+                  No, do not delete API key
+                </label>
+              </div>
             </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                No, do not delete API key
-              </label>
-            </div>
-          </div>
-      
-        </fieldset>
-      </div>
-
-
-    <form method="post" action="api-list-deleted">
-
-      <button class="govuk-button" data-module="govuk-button">
-        Save
-      </button>
-    </form>
+        
+          </fieldset>
+        </div>
+  
+        <button class="govuk-button" data-module="govuk-button">
+          Save
+        </button>
+      </form>
 
    </div>
 </div>
